--- a/challenge-3.ipynb
+++ b/challenge-3.ipynb
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 116,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -46,7 +46,16 @@
         "id": "HFtBxSL40CG9",
         "outputId": "49e0c805-cd5f-4d4b-be20-2cf551c8bc86"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Q1: Which statement is **true** regarding **precision** in a multi-class classification context? (1 point)\n",
+            "Answer: Precision is the fraction of predicted positives that are actual positives\n"
+          ]
+        }
+      ],
       "source": [
         "def answer_q1():\n",
         "    \"\"\"\n",
@@ -60,7 +69,7 @@
         "    }\n",
         "\n",
         "    # TODO: return the correct option number\n",
-        "    return options[REPLACE_WITH_CORRECT_OPTION_NUMBER]\n",
+        "    return options[2]\n",
         "\n",
         "print(f'Q1: Which statement is **true** regarding **precision** in a multi-class classification context? (1 point)\\nAnswer: {answer_q1()}')"
       ]
@@ -80,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 117,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -88,7 +97,16 @@
         "id": "uFto7n3ny7UA",
         "outputId": "2025056d-b701-4a72-89b4-7a459c2828b6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Q2: Which statement correctly describes the confusion matrix in a multi-class setting?\n",
+            "Answer: It’s an NxN array for N classes, comparing predicted vs. actual class labels\n"
+          ]
+        }
+      ],
       "source": [
         "def answer_q2():\n",
         "    \"\"\"\n",
@@ -102,7 +120,7 @@
         "    }\n",
         "\n",
         "    # TODO: return the correct option number\n",
-        "    return options[REPLACE_WITH_CORRECT_OPTION_NUMBER]\n",
+        "    return options[2]\n",
         "\n",
         "print(f'Q2: Which statement correctly describes the confusion matrix in a multi-class setting?\\nAnswer: {answer_q2()}')"
       ]
@@ -122,7 +140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 118,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -130,7 +148,16 @@
         "id": "c5SAsK9C2Z8R",
         "outputId": "edd20aeb-bf1e-4fcf-fd84-17c8e39a92a6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Q3: Which classifier typically uses bagging plus random subsets of features to reduce variance?\n",
+            "Answer: Random Forest\n"
+          ]
+        }
+      ],
       "source": [
         "def answer_q3():\n",
         "    \"\"\"\n",
@@ -144,7 +171,7 @@
         "    }\n",
         "\n",
         "    # TODO: return the correct option number\n",
-        "    return options[REPLACE_WITH_CORRECT_OPTION_NUMBER]\n",
+        "    return options[2]\n",
         "\n",
         "print(f'Q3: Which classifier typically uses bagging plus random subsets of features to reduce variance?\\nAnswer: {answer_q3()}')"
       ]
@@ -162,9 +189,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 119,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Q3: If we see a high recall but low precision for a certain class, what does that usually imply?\n",
+            "Answer: The model finds most actual positives (few false negatives), but also mislabels many negatives as that class (many false positives)\n"
+          ]
+        }
+      ],
       "source": [
         "def answer_q4():\n",
         "    \"\"\"\n",
@@ -178,7 +214,7 @@
         "    }\n",
         "\n",
         "    # TODO: return the correct option number\n",
-        "    return options[REPLACE_WITH_CORRECT_OPTION_NUMBER]\n",
+        "    return options[2]\n",
         "\n",
         "print(f'Q3: If we see a high recall but low precision for a certain class, what does that usually imply?\\nAnswer: {answer_q4()}')"
       ]
@@ -214,7 +250,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 120,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -223,7 +259,7 @@
         "import pandas as pd\n",
         "from sklearn.preprocessing import OneHotEncoder, LabelEncoder\n",
         "from sklearn.model_selection import train_test_split\n",
-        "# from sklearn.ensemble import RandomForestClassifier -> Choose your classifier\n",
+        "from sklearn.naive_bayes import GaussianNB\n",
         "from sklearn.metrics import precision_score, recall_score\n",
         "from sklearn.metrics import classification_report, confusion_matrix"
       ]
@@ -244,11 +280,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 121,
       "metadata": {
         "id": "Cm3MG7iySn15"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Shapes: (1728, 16) (1728,)\n"
+          ]
+        }
+      ],
       "source": [
         "def load_and_encode_car_data():\n",
         "    \"\"\"\n",
@@ -257,13 +301,24 @@
         "    3) map class to {0,1,2,3}\n",
         "    4) return X, y\n",
         "    \"\"\"\n",
-        "    # TODO\n",
-        "    pass\n",
+        "    # 1\n",
+        "    df = pd.read_csv(\"car.csv\")\n",
+        "\n",
+        "    # 2\n",
+        "    df = pd.get_dummies(df, columns=[\"buying\", \"maint\", \"doors\", \"persons\", \"lug_boot\", \"safety\"], drop_first=True)\n",
+        "\n",
+        "    # 3\n",
+        "    df[\"class\"] = df[\"class\"].map({\"unacc\":0, \"acc\":1, \"good\":2, \"vgood\":3})\n",
+        "\n",
+        "    # 4\n",
+        "    y = df[\"class\"]\n",
+        "    df.drop(\"class\", axis=1)\n",
+        "    X = df\n",
+        "    return (X, y)\n",
         "\n",
         "# demonstration\n",
-        "# X, y = load_and_encode_car_data()\n",
-        "# print(\"Shapes:\", X.shape, y.shape)\n",
-        "pass"
+        "X, y = load_and_encode_car_data()\n",
+        "print(\"Shapes:\", X.shape, y.shape)\n"
       ]
     },
     {
@@ -282,7 +337,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 122,
       "metadata": {
         "id": "t6L9tk63SxuZ"
       },
@@ -295,8 +350,18 @@
         "    3. fit & predict \n",
         "    4. return (model, X_test, y_test, y_pred)\n",
         "    \"\"\"\n",
-        "    # TODO\n",
-        "    pass"
+        "    # 1\n",
+        "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=80, random_state=42)\n",
+        "    \n",
+        "    # 2\n",
+        "    model = GaussianNB()\n",
+        "\n",
+        "    # 3\n",
+        "    model.fit(X_train, y_train)\n",
+        "    y_pred = model.predict(X_test)\n",
+        "\n",
+        "    # 4\n",
+        "    return (model, X_test, y_test, y_pred) \n"
       ]
     },
     {
@@ -311,7 +376,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 123,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -319,8 +384,8 @@
         "    \"\"\"\n",
         "    Return confusion_matrix array (sklearn).\n",
         "    \"\"\"\n",
-        "    # TODO\n",
-        "    pass"
+        "    \n",
+        "    return confusion_matrix(y_true, y_pred)"
       ]
     },
     {
@@ -339,7 +404,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 124,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -349,8 +414,9 @@
         "    2) compute f1 score manually\n",
         "    return that float\n",
         "    \"\"\"\n",
-        "    # TODO\n",
-        "    pass"
+        "    p = precision_score(y_true, y_pred, labels=[class_idx], average=\"macro\")\n",
+        "    r = recall_score(y_true, y_pred, labels=[class_idx], average=\"macro\")\n",
+        "    return p/r"
       ]
     },
     {
@@ -370,15 +436,39 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Generate confmatrix:\n",
+            "[[54  0  0  0]\n",
+            " [ 0 20  0  0]\n",
+            " [ 0  0  2  0]\n",
+            " [ 0  0  0  4]]\n",
+            "F1 for class 0 manually: 1.0\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       1.00      1.00      1.00        54\n",
+            "           1       1.00      1.00      1.00        20\n",
+            "           2       1.00      1.00      1.00         2\n",
+            "           3       1.00      1.00      1.00         4\n",
+            "\n",
+            "    accuracy                           1.00        80\n",
+            "   macro avg       1.00      1.00      1.00        80\n",
+            "weighted avg       1.00      1.00      1.00        80\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "def generate_classification_report(y_true, y_pred):\n",
         "    \"\"\"\n",
         "    calls sklearn's classification_report\n",
         "    returns it\n",
         "    \"\"\"\n",
-        "    # TODO\n",
-        "    pass\n",
+        "    \n",
+        "    return classification_report(y_true, y_pred)\n",
         "\n",
         "\n",
         "# optional demonstration\n",
@@ -399,7 +489,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "ise",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -413,7 +503,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.6"
+      "version": "3.12.1"
     }
   },
   "nbformat": 4,
